# grok

./: .gitignore  BUGS.md  Cargo.toml  Design.md  FUTURE.md  Filters.md  README.md  Todo.md
cat/: Cargo.toml
cat/src/: cat.rs  config.rs  decode_zstd.rs  main.rs
document/: Cargo.toml
document/src/: doc.rs  lib.rs  merged_logs.rs
experiments/parser/: Cargo.toml
grok/: Cargo.toml
grok/commands/: Cargo.toml
grok/src/: config.rs  display.rs  document.rs  input_line.rs  keyboard.rs  lib.rs  main.rs  search_prompt.rs  status_line.rs  user_input.rs  viewer.rs
grok/src/styled_text/: ANSI-Notes.md  NOTES.md  mod.rs
grok/tests/: sub_line_indexer.rs
indexed_file/: Cargo.toml
indexed_file/src/: eventual_index.rs  filter.rs  filtered_log.rs  filters.rs  index.rs  index_filter.rs  indexer.rs  iterator.rs  lib.rs  line_indexer.rs  log.rs  log_file.rs  log_stack.rs  mock_log_file.rs  sub_line_iterator.rs  time_stamper.rs
indexed_file/src/files/: async_stdin.rs  cached_stream_reader.rs  compressed_file.rs  compressed_file_proto.rs  cursor_log_file.rs  gzip_log_file.rs  log_file.rs  mock_log_file.rs  mod.rs  text_log.rs  text_log_file.rs  text_log_stream.rs  zstd_log_file.rs
indexed_file/src/files/compressed_file/: read_buffer.rs
indexed_file/src/indexer/: eventual_index.rs  index.rs  indexed_log.rs  iterator.rs  line_indexer.rs  mod.rs  sane_indexer.rs  time_stamper.rs  waypoint.rs
indexed_file/tests/: eventual_index.rs  filtered_log_test.rs  line_indexer.rs  sub_line_indexer.rs
play/: Cargo.toml
tac/: Cargo.toml
tail/: Cargo.toml
tools/: Cargo.toml
(+13 files in other folders)
