[package]
name = "indexed_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# structopt = "0.2.8"
# failure = "0.1.1"
# regex = "1"
# lazy_static = "1"
chrono = "*"
crossbeam = "*"
crossbeam-channel = "*"
fnv = "1"
itertools = "*"
log = "0.4"
lru = "*"
mapr = "*"
rand = "*"
regex = "*"
ruzstd = "0.3.1"
bstr = "*"
